Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "17"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,8 +1193,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    csq = math.sqrt(distance_between_neighbors_squared)\n",
-    "    return csq\n",
+    "    csq = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_))\n",
     "    pass"
    ]
   },
