--- a/index.ipynb
+++ b/index.ipynb
@@ -1289,7 +1289,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    \n",
+    "   dist math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
     "    pass"
    ]
   },
