Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1281,15 +1281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-14-5f6f45a693af>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-5f6f45a693af>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "   dist math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
+    "    dis = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
+    "    \n",
     "    pass"
    ]
   },
