--- a/index.ipynb
+++ b/index.ipynb
@@ -1331,6 +1331,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
+    "    remaining_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
+    "    return \n",
+    "    \n",
     "    pass"
    ]
   },
