Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1332,7 +1332,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    remaining_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
-    "    return \n",
+    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor), remaining_neighbors))\n",
     "    \n",
     "    pass"
    ]
